sample/error/e02609-i.asn
E02609-I DEFINITIONS ::=
BEGIN
    set SET {           -- E02609-I
        item1 INTEGER,
        item2 REAL,
        item3 NULL
    } ::= {
        item1 100
    }
END
